<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

        </EditText>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/boton1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:backgroundTint="#009999">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label1" />

                <TextView
                    android:id="@+id/lblCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/label1_2"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:backgroundTint="#0099CC">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label2" />

                <TextView
                    android:id="@+id/lblmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/label2_2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:backgroundTint="#FF9900">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label3" />

                <TextView
                    android:id="@+id/lblmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/label3_2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                android:gravity="center_vertical"
                android:background="@color/white"
                android:backgroundTint="#FF3333">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label4" />

                <TextView
                    android:id="@+id/textViewWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/label4_2"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imgWeather"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton2"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>